fix: update favicon link format, enhance text formatting for better readability, and adjust CSS for responsive design

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -455,8 +455,11 @@ body {
 }
 
 @media (max-width: 768px) {
+  .how__item-text-break {
+    display: inline;
+  }
   html {
-    font-size: clamp(12px, calc(100vw / 1440 * 16), 16px);
+    font-size: clamp(16px, calc(100vw / 1440 * 16), 16px);
   }
   .contain,
   .container {
